--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,36 @@
 [submodule "home/.oh-my-zsh"]
 	path = home/.oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "home/.vim/bundle/jQuery"]
+	path = home/.vim/bundle/jQuery
+	url = git@github.com:vim-scripts/jQuery.git
+[submodule "home/.vim/bundle/vim-fugitive"]
+	path = home/.vim/bundle/vim-fugitive
+	url = git@github.com:tpope/vim-fugitive.git
+[submodule "home/.vim/bundle/vim-ruby"]
+	path = home/.vim/bundle/vim-ruby
+	url = git@github.com:vim-ruby/vim-ruby.git
+[submodule "home/.vim/bundle/vim-cucumber"]
+	path = home/.vim/bundle/vim-cucumber
+	url = git@github.com:tpope/vim-cucumber.git
+[submodule "home/.vim/bundle/vim-rails"]
+	path = home/.vim/bundle/vim-rails
+	url = git@github.com:tpope/vim-rails.git
+[submodule "home/.vim/bundle/vim-javascript"]
+	path = home/.vim/bundle/vim-javascript
+	url = git@github.com:pangloss/vim-javascript.git
+[submodule "home/.vim/bundle/vim-coffee-script"]
+	path = home/.vim/bundle/vim-coffee-script
+	url = git@github.com:kchmck/vim-coffee-script.git
+[submodule "home/.vim/bundle/vim-haml"]
+	path = home/.vim/bundle/vim-haml
+	url = git@github.com:tpope/vim-haml.git
+[submodule "home/.vim/bundle/handlebars"]
+	path = home/.vim/bundle/handlebars
+	url = git@github.com:nono/vim-handlebars.git
+[submodule "home/.vim/bundle/vim-slim"]
+	path = home/.vim/bundle/vim-slim
+	url = git@github.com:slim-template/vim-slim.git
+[submodule "home/.vim/bundle/vim-rbenv"]
+	path = home/.vim/bundle/vim-rbenv
+	url = git@github.com:tpope/vim-rbenv.git
