--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "home/.vim/bundle/vim-golang"]
 	path = home/.vim/bundle/vim-golang
 	url = git@github.com:jnwhiteh/vim-golang.git
+[submodule "home/.vim/bundle/vim-yaml"]
+	path = home/.vim/bundle/vim-yaml
+	url = git@github.com:avakhov/vim-yaml.git
