add ruby refactoring vim plugin
Signed-off-by: Tyler Pickett <t.pickett66@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "home/.vim/bundle/vim-yaml"]
 	path = home/.vim/bundle/vim-yaml
 	url = git@github.com:avakhov/vim-yaml.git
+[submodule "home/.vim/bundle/vim-ruby-refactoring"]
+	path = home/.vim/bundle/vim-ruby-refactoring
+	url = git@github.com:ecomba/vim-ruby-refactoring.git
