--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,5 +2,49 @@
 set -g default-terminal "screen-256color"
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+set -g status-bg '#222222'
+set -g status-fg '#bbbbbb'
+
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
+
+# remap leader key to Ctrl-a
+unbind C-b
+set -g prefix C-a
+
+# reattach to userspace so we can copy/paste
+set -g default-command 'reattach-to-user-namespace -l zsh'
+
+# set navigation to be like vim
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# set split hot keys
+bind | split-window -h
+bind - split-window -v
+
+# add a battery indicator to the status bar
+set-window-option -g window-status-current-bg colour244
+set-window-option -g window-status-current-fg red
+set-window-option -g window-status-current-attr bright
+set -g status-right '#(~/bin/battery_indicator.sh) #[bg=white,fg=colour240] %H:%M #[bg=colour240,fg=white] %Y-%m-%d '
+set -g status-utf8 on
+
+# stop tmux from changing our window names
+set-window-option -g automatic-rename off
+
+# reload tmux.conf
+bind C-r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+# layout script bindings
+bind R source-file ~/.tmux/ruby
