--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -5,6 +5,8 @@
 	diff = auto
 	status = auto
 	branch = auto
+	interactive = auto
+	ui = auto
 [push]
 	default = simple
 [core]
@@ -15,7 +17,8 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
-
+[gc]
+	auto=1
 
 [alias]
 	gerrit-submit = "!bash -c ' \
