--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "home/.emacs.d/lisp/evil"]
 	path = home/.emacs.d/lisp/evil
 	url = git://gitorious.org/evil/evil.git
+[submodule "home/.emacs.d/themes/emacs-color-theme-solarized"]
+	path = home/.emacs.d/themes/emacs-color-theme-solarized
+	url = git@github.com:sellout/emacs-color-theme-solarized.git
