other misc updates

--- a/home/.ackrc
+++ b/home/.ackrc
@@ -19,6 +19,7 @@
 --type-set=haml=.haml
 --type-set=slim=.slim
 --type-set=erb=.erb
+--type-set=csv=.csv
 
 # don't search logs or tmp folders
 --ignore-dir=log
