--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -7,7 +7,6 @@ set -g status-fg '#bbbbbb'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-set -g status-right ''
 
 # remap leader key to Ctrl-a
 unbind C-b
@@ -28,6 +27,7 @@ unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+bind-key y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # set split hot keys
 bind | split-window -h
