--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "home/.emacs.d/themes/emacs-color-theme-solarized"]
 	path = home/.emacs.d/themes/emacs-color-theme-solarized
 	url = git@github.com:sellout/emacs-color-theme-solarized.git
+[submodule "home/.vim/bundle/Dockerfile"]
+	path = home/.vim/bundle/Dockerfile
+	url = https://github.com/ekalinin/Dockerfile.vim.git
