--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "home/.vim/bundle/vim-qml"]
 	path = home/.vim/bundle/vim-qml
 	url = git@github.com:peterhoeg/vim-qml.git
+[submodule "home/.vim/bundle/vim-go"]
+	path = home/.vim/bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
