add ragel highlighting

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "home/.vim/bundle/vim-go"]
 	path = home/.vim/bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule "home/.vim/bundle/vim-ragel"]
+	path = home/.vim/bundle/vim-ragel
+	url = https://github.com/msteinert/vim-ragel.git
