switch to work email as default in git

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Tyler Pickett
-	email = t.pickett66@gmail.com
+	email = tpickett@instructure.com
+	#email = t.pickett66@gmail.com
 [color]
 	diff = auto
 	status = auto
