--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -13,7 +13,7 @@ unbind C-b
 set -g prefix C-a
 
 # reattach to userspace so we can copy/paste
-set -g default-command 'reattach-to-user-namespace -l zsh'
+# set -g default-command 'reattach-to-user-namespace -l zsh'
 
 # set navigation to be like vim
 setw -g mode-keys vi
@@ -21,24 +21,24 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-unbind p
-bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# bind-key -r C-h select-window -t :-
+# bind-key -r C-l select-window -t :+
+# unbind p
+# bind p paste-buffer
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+# bind-key y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # set split hot keys
-bind | split-window -h
-bind - split-window -v
+# bind | split-window -h
+# bind - split-window -v
 
 # add a battery indicator to the status bar
-set-window-option -g window-status-current-bg colour244
-set-window-option -g window-status-current-fg red
-set-window-option -g window-status-current-attr bright
-set -g status-right '#(~/bin/battery_indicator.sh) #[bg=white,fg=colour240] %H:%M #[bg=colour240,fg=white] %Y-%m-%d '
-set -g status-utf8 on
+# set-window-option -g window-status-current-bg colour244
+# set-window-option -g window-status-current-fg red
+# set-window-option -g window-status-current-attr bright
+# set -g status-right '#(~/bin/battery_indicator.sh) #[bg=white,fg=colour240] %H:%M #[bg=colour240,fg=white] %Y-%m-%d '
+# set -g status-utf8 on
 
 # stop tmux from changing our window names
 set-window-option -g automatic-rename off
